--- a/Survey.Api/Survey.Api.csproj
+++ b/Survey.Api/Survey.Api.csproj
@@ -10,4 +10,9 @@
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Survey.Application\Survey.Application.csproj" />
+      <ProjectReference Include="..\Survey.Contract\Survey.Contract.csproj" />
+    </ItemGroup>
+
 </Project>
