init contract class library for poll request and response

--- a/Survey.Contract/Survey.Contract.csproj
+++ b/Survey.Contract/Survey.Contract.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Survey.Application\Survey.Application.csproj" />
+    </ItemGroup>
+
 </Project>
