add a fluent validator from to any request

--- a/Survey.Contract/Survey.Contract.csproj
+++ b/Survey.Contract/Survey.Contract.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\Survey.Application\Survey.Application.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.10.0" />
+    </ItemGroup>
+
 </Project>
