--- a/Survey.Api/appsettings.Development.json
+++ b/Survey.Api/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "Default": "Host=ep-damp-sound-a5rj30rn.us-east-2.aws.neon.tech;Database=surveyBasket;Username=neondb_owner;Password=XfTZJO1F4eDv;SSL Mode=Require;"
   }
 }
+
+  
