--- a/Survey.Api/Survey.Api.csproj
+++ b/Survey.Api/Survey.Api.csproj
@@ -9,17 +9,22 @@
     <ItemGroup>
         <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
         <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.10.0" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.8">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Survey.Application\Survey.Application.csproj" />
       <ProjectReference Include="..\Survey.Contract\Survey.Contract.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="FluentValidation.AspNetCore">
+        <HintPath>..\..\..\.nuget\packages\fluentvalidation.aspnetcore\11.3.0\lib\net6.0\FluentValidation.AspNetCore.dll</HintPath>
+      </Reference>
     </ItemGroup>
 
 </Project>
